--- a/meskkdicw/meskkdicw.vcxproj
+++ b/meskkdicw/meskkdicw.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="..\meskkdic\meskkdic.cpp" />
     <ClCompile Include="..\meskkdic\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
