--- a/meskkdic/meskkdic.vcxproj.filters
+++ b/meskkdic/meskkdic.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\README.TXT" />
+  </ItemGroup>
 </Project>
