改行コードの無い最後の行まで読み込むように修正しました。

--- a/meskkdic/meskkdic.vcxproj
+++ b/meskkdic/meskkdic.vcxproj
@@ -73,6 +73,7 @@
       <ForcedIncludeFiles>
       </ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <ControlFlowGuard>Guard</ControlFlowGuard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
