--- a/meskkdicw/meskkdicw.vcxproj
+++ b/meskkdicw/meskkdicw.vcxproj
@@ -79,6 +79,7 @@
       <ForcedIncludeFiles>
       </ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <ControlFlowGuard>Guard</ControlFlowGuard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
